; ModuleID = '/home/carl/AnghaBench/tmux/extr_arguments.c_args_next_value.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_arguments.c_args_next_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.args_value = type { i8* }

@entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @args_next_value(%struct.args_value** %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.args_value**, align 8
  store %struct.args_value** %0, %struct.args_value*** %3, align 8
  %4 = load %struct.args_value**, %struct.args_value*** %3, align 8
  %5 = load %struct.args_value*, %struct.args_value** %4, align 8
  %6 = icmp eq %struct.args_value* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %23

8:                                                ; preds = %1
  %9 = load %struct.args_value**, %struct.args_value*** %3, align 8
  %10 = load %struct.args_value*, %struct.args_value** %9, align 8
  %11 = load i32, i32* @entry, align 4
  %12 = call %struct.args_value* @TAILQ_NEXT(%struct.args_value* %10, i32 %11)
  %13 = load %struct.args_value**, %struct.args_value*** %3, align 8
  store %struct.args_value* %12, %struct.args_value** %13, align 8
  %14 = load %struct.args_value**, %struct.args_value*** %3, align 8
  %15 = load %struct.args_value*, %struct.args_value** %14, align 8
  %16 = icmp eq %struct.args_value* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %8
  store i8* null, i8** %2, align 8
  br label %23

18:                                               ; preds = %8
  %19 = load %struct.args_value**, %struct.args_value*** %3, align 8
  %20 = load %struct.args_value*, %struct.args_value** %19, align 8
  %21 = getelementptr inbounds %struct.args_value, %struct.args_value* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %2, align 8
  br label %23

23:                                               ; preds = %18, %17, %7
  %24 = load i8*, i8** %2, align 8
  ret i8* %24
}

declare dso_local %struct.args_value* @TAILQ_NEXT(%struct.args_value*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
